--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h3> O que vamos aprender nessa jornada</h3>
         <ol>
             <li>Git e Github</li>
-            <li>Usar o Figma</li>
+            <li>Usar o Fgma</li>
             <li>estrutura básica do HTML</li>
             
         </ol>
